--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>NetguruHangman</title>
-  <base href="/">
-  {{content-for 'head'}}
-  
+  <base href="/"> {{content-for 'head'}}
+
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,8 +22,11 @@
   </script>
   -->
 </head>
+
 <body>
-  <netguru-hangman-app>Loading...</netguru-hangman-app>
+  <netguru-hangman-app>
+    <div class="pulse"></div>
+  </netguru-hangman-app>
 
   <script src="vendor/es6-shim/es6-shim.js"></script>
   <script src="vendor/reflect-metadata/Reflect.js"></script>
@@ -36,4 +39,5 @@
     }).catch(console.error.bind(console));
   </script>
 </body>
+
 </html>
