--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <title>NetguruHangman</title>
   <base href="/"> {{content-for 'head'}}
 
+  <link rel="stylesheet" type="text/css" href="assets/spinkit/spinkit.css">
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,7 +26,7 @@
 
 <body>
   <netguru-hangman-app>
-    <div class="pulse"></div>
+    <div id="spinner" class="sk-spinner sk-spinner-pulse"></div>
   </netguru-hangman-app>
 
   <script src="vendor/es6-shim/es6-shim.js"></script>
