Centerfix loading spinner

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="assets/spinkit/spinkit.css">
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
   <!-- Service worker support is disabled by default.
        Install the worker script and uncomment to enable.
@@ -26,7 +26,7 @@
 
 <body>
   <netguru-hangman-app>
-    <div id="spinner" class="sk-spinner sk-spinner-pulse"></div>
+    <div id="spinner" class="center-fix sk-spinner sk-spinner-pulse"></div>
   </netguru-hangman-app>
 
   <script src="vendor/es6-shim/es6-shim.js"></script>
